Fix weather cloud and snow on safari

--- a/src/scss/components/_weather.scss
+++ b/src/scss/components/_weather.scss
@@ -48,12 +48,12 @@
   background-color: #84a4cc;
   &::before {
     background:
-      linear-gradient(-60deg, transparent 7px, #64e9fd 9px, transparent 10px) 2px 32px repeat-x,
-      radial-gradient(10px 9px, #fff 10px, transparent 11px) 0 -3px repeat-x,
-      radial-gradient(12px 12px, #fff 90%, transparent 100%) 2px -11px no-repeat,
-      linear-gradient(#fff 8px, transparent 9px) 10px 20px no-repeat
+      linear-gradient(-60deg, rgba(250,250,250, 0) 7px, #64e9fd 9px, rgba(250,250,250, 0) 10px) 2px 32px repeat-x,
+      radial-gradient(10px 9px, #fff 10px, rgba(250,250,250, 0) 11px) 0 -3px repeat-x,
+      radial-gradient(12px 12px, #fff 90%, rgba(250,250,250, 0) 100%) 2px -11px no-repeat,
+      linear-gradient(#fff 8px, rgba(250,250,250, 0) 9px) 10px 20px no-repeat
     ;
-    background-size: 11px 7px, 23px, 45px 48px, 24px;
+    background-size: 11px 7px, 23px 44px, 45px 48px, 24px 24px;
   }
 }
 
@@ -61,14 +61,14 @@
   background-color: #92bace;
   &::before {
     background:
-      radial-gradient(2px 2px, #fff 2px, transparent 2px) 1px 31px repeat-x,
-      radial-gradient(2px 2px, #fff 2px, transparent 2px) 1px 29px repeat-x,
-      radial-gradient(2px 2px, #fff 2px, transparent 2px) 1px 29px no-repeat,
-      radial-gradient(10px 9px, #fff 10px, transparent 11px) 0 -3px repeat-x,
-      radial-gradient(12px 12px, #fff 90%, transparent 100%) -2px -10px no-repeat,
-      linear-gradient(#fff 8px, transparent 9px) 10px 20px no-repeat
+      radial-gradient(2px 2px, #fff 2px, rgba(250,250,250, 0) 3px) 1px 31px repeat-x,
+      radial-gradient(2px 2px, #fff 2px, rgba(250,250,250, 0) 3px) 1px 30px repeat-x,
+      radial-gradient(2px 2px, #fff 2px, rgba(250,250,250, 0) 3px) 1px 30px no-repeat,
+      radial-gradient(10px 9px, #fff 10px, rgba(250,250,250, 0) 11px) 0 -3px repeat-x,
+      radial-gradient(12px 12px, #fff 90%, rgba(250,250,250, 0) 100%) -2px -10px no-repeat,
+      linear-gradient(#fff 8px, rgba(250,250,250, 0) 9px) 10px 20px no-repeat
     ;
-    background-size: 11px 7px, 22px 20px, 44px 20px, 23px, 48px, 24px;
+    background-size: 11px 7px, 22px 20px, 44px 20px, 23px 44px, 48px 44px, 24px 24px;
   }
 }
 
